--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Week 3/Diabetes-Classification.csv
 Week 2/weather_data_extended.csv
 Week 4/IRIS.csv
 Week 5/fitness_class_2212.csv
+Week 6/Mall_Customers.csv
