Half done week 8

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Week 5/fitness_class_2212.csv
 Week 6/Mall_Customers.csv
 Week 6/bi.csv
 Week 7/Diabetes-Classification.csv
+desktop.ini
+Week 8/climate_2009.csv
+Week 8/twitter_training.csv
