--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Week 7/Diabetes-Classification.csv
 desktop.ini
 Week 8/climate_2009.csv
 Week 8/twitter_training.csv
+Week 8/vaccination_all_tweets.csv
